<resources>
    <string name="app_name">WiFi Monitor</string>
    <string name="status_title">WiFi Monitor Status</string>
    <string name="label_permission_status">Permission Status</string>
    <string name="label_app_status">App Status</string>
    <string name="label_wifi_status">WiFi Network</string>
    <string name="status_granted">Granted</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="status_description">Monitoring WiFi connectivity changes in background</string>
    <string name="wifi_not_connected">Not Connected</string>
    <string name="label_available_networks">Available Networks</string>
    <string name="no_networks_found">No networks found or scanning...</string>
    <string name="permission_denied">Denied</string>
</resources>
